infrastructure/main.tf
resource "aws_instance" "web-server-instance" {
  ami               = "ami-09e67e426f25ce0d7"
  instance_type     = "t2.micro"
  availability_zone = "us-east-1a"
  key_name          = "main-key"
<<<<<<< HEAD
  user_data         = <<-EOF
=======

  user_data = <<-EOF
>>>>>>> f63ec27a132f4b233c9650df30989fd38b99bb6e
                #!/bin/bash
                sudo apt update -y
                sudo apt install apache2 -y
                sudo systemctl start apache2
                sudo bash -c 'echo your very first web server > /var/www/html/index.html'
                EOF
  tags = {
    Name = "web-server"
  }
<<<<<<< HEAD
}
=======
}
>>>>>>> f63ec27a132f4b233c9650df30989fd38b99bb6e
